# SympleEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SympleEngine.sln  SympleEngine.vcxproj  premake5.lua  vcpkg.json
Engine/: CMakeLists.txt
Engine/include/Platform/GLFW/: GLFWWindow.h
Engine/include/Symple/Engine/: SympleEngine.h  Test.h
Engine/include/Symple/Engine/Core/: Application.h  Base.h  EntryPoint.h  Object.h
Engine/include/Symple/Engine/Graphics/: Window.h
Engine/src/: Test.cpp
Engine/src/Core/: Application.cpp
Engine/src/Platform/GLFW/: GLFWWindow.cpp
Example/: CMakeLists.txt
Example/src/: Main.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: Main.cpp
SympleEngine/: SympleEngine.vcxproj  SympleEngine.vcxproj.filters  Window.h
SympleEngine/src/: SympleEngine.h  syegpch.cpp  syegpch.h
SympleEngine/src/Core/: Application.cpp  Application.h  Assert.h  Console.cpp  Console.h  Core.h  EntryPoint.h  KeyCode.h  MouseCode.h  Window.cpp  Window.h
SympleEngine/src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
SympleEngine/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
SympleExample/: SympleExample.vcxproj  SympleExample.vcxproj.filters
SympleExample/src/: Example.cpp
bin-int/Debug-windows-x86_64/SympleEngine/: SympleEngine.dll.recipe  vc142.idb
bin-int/Debug-windows-x86_64/SympleEngine/SympleEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SympleEngine.lastbuildstate  SympleEngine.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-windows-x86_64/SympleExample/: SympleExample.exe.recipe  vc142.idb
bin-int/Debug-windows-x86_64/SympleExample/SympleExample.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
int/Debug-x64/SympleEngine/: SympleEngine.dll.recipe  vc142.idb
int/Debug-x64/SympleEngine/SympleEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SympleEngine.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
int/Debug-x64/SympleExample/: SympleExample.exe.recipe  vc142.idb
int/Debug-x64/SympleExample/SympleExample.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
